refactor command structure

--- a/build.gradle
+++ b/build.gradle
@@ -66,10 +66,10 @@ dependencies {
     implementation 'net.wesjd:anvilgui:1.9.0-SNAPSHOT'
     implementation 'io.github.rapha149.signgui:signgui:2.2.1'
     implementation 'org.bstats:bstats-bukkit:3.0.0'
+    implementation "dev.jorel:commandapi-bukkit-shade:9.2.0"
     implementation group: 'org.fusesource.jansi', name: 'jansi', version: '2.4.0'
 
     // Exclude these
-    implementation 'me.lucko:commodore:2.2'
     implementation 'me.lucko:jar-relocator:1.7'
     implementation 'com.github.stefvanschie.inventoryframework:IF:0.10.11'
 
@@ -104,10 +104,9 @@ shadowJar {
     relocate 'com.github.stefvanschie.inventoryframework', 'com.cyr1en.inventoryframework'
     relocate 'net.wesjd.anvilgui', 'com.cyr1en.anvilgui'
     relocate 'io.github.rapha149.signgui', 'com.cyr1en.signgui'
-    relocate 'me.lucko.commodore', 'com.cyr1en.commodore'
+    relocate 'dev.jorel.commandapi', 'com.cyr1en.commandapi'
     relocate 'org.fusesource.jansi', 'com.cyr1en.jansi'
     relocate 'org.bstats', 'com.cyr1en.bstats'
-
 
     manifest {
         attributes "Bundled": true
@@ -115,7 +114,6 @@ shadowJar {
 }
 
 import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
-
 
 tasks.register("lightJar", ShadowJar) {
     archiveClassifier.set(pluginManifest.version.classifier)
@@ -127,19 +125,18 @@ tasks.register("lightJar", ShadowJar) {
         exclude(dependency('com.mojang:brigadier'))
         exclude(dependency('com.github.stefvanschie.inventoryframework:IF'))
         exclude(dependency('me.lucko:jar-relocator'))
-        exclude(dependency('me.lucko:commodore'))
-        exclude(dependency('me.lucko:commodore-file'))
         exclude(dependency('org.ow2.asm:asm'))
         exclude(dependency('org.ow2.asm:asm-commons'))
         exclude(dependency('org.ow2.asm:asm-tree'))
         exclude(dependency('org.ow2.asm:asm-analysis'))
         exclude(dependency('io.github.rapha149.signgui:signgui'))
+        exclude(dependency('dev.jorel:commandapi-bukkit-shade'))
     }
     relocate 'com.github.stefvanschie.inventoryframework', 'com.cyr1en.inventoryframework'
     relocate 'net.wesjd.anvilgui', 'com.cyr1en.anvilgui'
     relocate 'io.github.rapha149.signgui', 'com.cyr1en.signgui'
-    relocate 'me.lucko.commodore', 'com.cyr1en.commodore'
     relocate 'org.fusesource.jansi', 'com.cyr1en.jansi'
+    relocate 'dev.jorel.commandapi', 'com.cyr1en.commandapi'
     relocate 'org.bstats', 'com.cyr1en.bstats'
 }
 
