add rebuild cache command

--- a/src/main/resources/CommandPrompter.properties
+++ b/src/main/resources/CommandPrompter.properties
@@ -7,6 +7,7 @@ PromptPlayerOnly = &6CommandPrompter can only be used by a player.!
 PromptCancel = &6Command completion cancelled!
 CommandCancelNotInCompletion = &cYou are not in command completion.
 CommandReloadSuccess = &aSuccessfully reloaded configuration!
+CommandRebuildHeadCacheSuccess = &aSuccessfully rebuilt head cache! (%sms)
 DelegateInvalidArgs = &cInvalid arguments for console delegate command!
 DelegateUsage = &6Usage: &3%s
 DelegateInvalidPlayer = &cThe player &6%s&c is not online!
