--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,7 @@ repositories {
     maven { url 'https://repo.codemc.io/repository/maven-snapshots/' }
     maven { url 'https://repo.extendedclip.com/content/repositories/placeholderapi/' }
     maven { url 'https://jitpack.io' }
+    maven { url 'https://repo.glaremasters.me/repository/towny/'}
     flatDir { dirs 'libs' }
 }
 
@@ -76,6 +77,7 @@ dependencies {
     compileOnly 'me.clip:placeholderapi:2.11.2'
     compileOnly "net.kyori:adventure-text-serializer-legacy:4.13.1"
     compileOnly "net.kyori:adventure-text-serializer-plain:4.13.1"
+    compileOnly 'com.palmergames.bukkit.towny:towny:0.100.0.0'
     compileOnly "org.spigotmc:spigot-api:1.20.4-R0.1-SNAPSHOT"
     compileOnly 'com.github.LeonMangler:SuperVanish:6.2.17'
     compileOnly 'com.github.mbax:VanishNoPacket:3.22'
