--- a/build.gradle
+++ b/build.gradle
@@ -82,6 +82,7 @@ dependencies {
     compileOnly 'com.github.LeonMangler:SuperVanish:6.2.17'
     compileOnly 'com.github.mbax:VanishNoPacket:3.22'
     compileOnly 'org.jetbrains:annotations:23.0.0'
+    compileOnly 'net.luckperms:api:5.4'
 
     // Local
     implementation fileTree(dir: 'libs', include: '*.jar')
