--- a/build.gradle
+++ b/build.gradle
@@ -73,11 +73,11 @@ dependencies {
     // Exclude these
     implementation 'me.lucko:jar-relocator:1.7'
     implementation 'com.github.stefvanschie.inventoryframework:IF:0.10.11'
+    implementation "net.kyori:adventure-text-minimessage:4.15.0"
 
     compileOnly 'me.clip:placeholderapi:2.11.2'
     compileOnly "net.kyori:adventure-text-serializer-legacy:4.15.0"
     compileOnly "net.kyori:adventure-text-serializer-plain:4.15.0"
-    compileOnly "net.kyori:adventure-text-minimessage:4.15.0"
     compileOnly 'com.palmergames.bukkit.towny:towny:0.100.0.0'
     compileOnly "org.spigotmc:spigot-api:1.20.4-R0.1-SNAPSHOT"
     compileOnly 'com.github.LeonMangler:SuperVanish:6.2.17'
@@ -107,6 +107,7 @@ shadowJar {
     relocate 'com.github.stefvanschie.inventoryframework', 'com.cyr1en.inventoryframework'
     relocate 'net.wesjd.anvilgui', 'com.cyr1en.anvilgui'
     relocate 'io.github.rapha149.signgui', 'com.cyr1en.signgui'
+    relocate 'net.kyori.adventure.text.minimessage', 'com.cyr1en.minimessage'
     relocate 'dev.jorel.commandapi', 'com.cyr1en.commandapi'
     relocate 'org.fusesource.jansi', 'com.cyr1en.jansi'
     relocate 'org.bstats', 'com.cyr1en.bstats'
@@ -126,6 +127,7 @@ tasks.register("lightJar", ShadowJar) {
         exclude(dependency('com.mojang:brigadier'))
         exclude(dependency('com.github.stefvanschie.inventoryframework:IF'))
         exclude(dependency('me.lucko:jar-relocator'))
+        exclude(dependency('net.kyori:adventure-text-minimessage'))
         exclude(dependency('org.ow2.asm:asm'))
         exclude(dependency('org.ow2.asm:asm-commons'))
         exclude(dependency('org.ow2.asm:asm-tree'))
@@ -136,6 +138,7 @@ tasks.register("lightJar", ShadowJar) {
     relocate 'com.github.stefvanschie.inventoryframework', 'com.cyr1en.inventoryframework'
     relocate 'net.wesjd.anvilgui', 'com.cyr1en.anvilgui'
     relocate 'io.github.rapha149.signgui', 'com.cyr1en.signgui'
+    relocate 'net.kyori.adventure.text.minimessage', 'com.cyr1en.minimessage'
     relocate 'org.fusesource.jansi', 'com.cyr1en.jansi'
     relocate 'dev.jorel.commandapi', 'com.cyr1en.commandapi'
     relocate 'org.bstats', 'com.cyr1en.bstats'
