fix dependency issues

--- a/build.gradle
+++ b/build.gradle
@@ -128,6 +128,10 @@ tasks.register("lightJar", ShadowJar) {
         exclude(dependency('com.github.stefvanschie.inventoryframework:IF'))
         exclude(dependency('me.lucko:jar-relocator'))
         exclude(dependency('net.kyori:adventure-text-minimessage'))
+        exclude(dependency('net.kyori:adventure-api'))
+        exclude(dependency('net.kyori:adventure-key'))
+        exclude(dependency('net.kyori:examination-api'))
+        exclude(dependency('net.kyori:examination-string'))
         exclude(dependency('org.ow2.asm:asm'))
         exclude(dependency('org.ow2.asm:asm-commons'))
         exclude(dependency('org.ow2.asm:asm-tree'))
