--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ compileTestJava.options.encoding = "UTF-8"
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(16)
+        languageVersion = JavaLanguageVersion.of(17)
     }
 }
 
@@ -69,6 +69,7 @@ dependencies {
     implementation 'org.bstats:bstats-bukkit:3.0.0'
     implementation "dev.jorel:commandapi-bukkit-shade:9.3.0"
     implementation group: 'org.fusesource.jansi', name: 'jansi', version: '2.4.0'
+    implementation("com.github.Euphillya:Energie:5659f25e22")
 
     // Exclude these
     implementation 'me.lucko:jar-relocator:1.7'
