change shadow fork

--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@
  */
 
 plugins {
-    id "com.github.johnrengelman.shadow" version "7.0.0"
+    id "io.github.goooler.shadow" version "8.1.7"
     id 'java'
     id 'maven-publish'
 }
