better relocation for kyori libs

--- a/build.gradle
+++ b/build.gradle
@@ -113,7 +113,8 @@ shadowJar {
     relocate 'com.github.stefvanschie.inventoryframework', 'com.cyr1en.inventoryframework'
     relocate 'net.wesjd.anvilgui', 'com.cyr1en.anvilgui'
     relocate 'de.rapha149.signgui', 'com.cyr1en.signgui'
-    relocate 'net.kyori.adventure.text.minimessage', 'com.cyr1en.minimessage'
+    relocate 'net.kyori.adventure', 'com.cyr1en.adventure'
+    relocate 'net.kyori.examination', 'com.cyr1en.examination'
     relocate 'dev.jorel.commandapi', 'com.cyr1en.commandapi'
     relocate 'org.fusesource.jansi', 'com.cyr1en.jansi'
     relocate 'org.bstats', 'com.cyr1en.bstats'
