implement JS expression input validation.

--- a/build.gradle
+++ b/build.gradle
@@ -58,7 +58,7 @@ repositories {
     maven { url 'https://repo.codemc.io/repository/maven-public/' }
     maven { url 'https://repo.extendedclip.com/content/repositories/placeholderapi/' }
     maven { url 'https://jitpack.io' }
-    maven { url 'https://repo.glaremasters.me/repository/towny/'}
+    maven { url 'https://repo.glaremasters.me/repository/towny/' }
     maven { url 'https://repo.william278.net/releases' }
     flatDir { dirs 'libs' }
 }
@@ -73,6 +73,7 @@ dependencies {
     implementation "net.kyori:adventure-text-minimessage:4.17.0"
     implementation "dev.jorel:commandapi-bukkit-shade:9.7.0"
     implementation 'de.rapha149.signgui:signgui:2.5.0'
+    implementation 'org.openjdk.nashorn:nashorn-core:15.4'
 
     compileOnly 'me.clip:placeholderapi:2.11.6'
     compileOnly "net.kyori:adventure-text-serializer-legacy:4.17.0"
