--- a/build.gradle
+++ b/build.gradle
@@ -66,18 +66,18 @@ repositories {
 dependencies {
     implementation 'com.cyr1en:kiso-utils:1.8-SNAPSHOT'
     implementation 'com.cyr1en:kiso-mc:1.8-SNAPSHOT'
-    implementation 'net.wesjd:anvilgui:1.10.4-SNAPSHOT'
+    implementation 'net.wesjd:anvilgui:1.10.5-SNAPSHOT'
     implementation 'org.bstats:bstats-bukkit:3.0.2'
     implementation group: 'org.fusesource.jansi', name: 'jansi', version: '2.4.0'
-    implementation 'com.github.stefvanschie.inventoryframework:IF:0.10.19'
-    implementation "net.kyori:adventure-text-minimessage:4.17.0"
-    implementation "dev.jorel:commandapi-bukkit-shade:9.7.0"
-    implementation 'de.rapha149.signgui:signgui:2.5.0'
+    implementation 'com.github.stefvanschie.inventoryframework:IF:0.11.0'
+    implementation "net.kyori:adventure-text-minimessage:4.21.0"
+    implementation "dev.jorel:commandapi-bukkit-shade:10.0.1"
+    implementation 'de.rapha149.signgui:signgui:2.5.1'
     implementation 'org.openjdk.nashorn:nashorn-core:15.4'
 
+    compileOnly "net.kyori:adventure-text-serializer-legacy:4.21.0"
+    compileOnly "net.kyori:adventure-text-serializer-plain:4.21.0"
     compileOnly 'me.clip:placeholderapi:2.11.6'
-    compileOnly "net.kyori:adventure-text-serializer-legacy:4.17.0"
-    compileOnly "net.kyori:adventure-text-serializer-plain:4.17.0"
     compileOnly 'com.palmergames.bukkit.towny:towny:0.100.3.0'
     compileOnly "org.spigotmc:spigot-api:1.21.3-R0.1-SNAPSHOT"
     compileOnly 'com.github.LeonMangler:SuperVanish:6.2.18-3'
@@ -108,6 +108,7 @@ shadowJar {
     archiveClassifier.set('')
     archiveVersion.set(pluginManifest.version.getFullVersion())
 
+    //relocate 'net.kyori.adventure', 'com.cyr1en.adventure'
     relocate 'com.github.stefvanschie.inventoryframework', 'com.cyr1en.inventoryframework'
     relocate 'net.wesjd.anvilgui', 'com.cyr1en.anvilgui'
     relocate 'de.rapha149.signgui', 'com.cyr1en.signgui'
