--- a/build.gradle
+++ b/build.gradle
@@ -77,6 +77,7 @@ dependencies {
     implementation 'net.wesjd:anvilgui:1.10.6-SNAPSHOT'
     implementation 'com.github.stefvanschie.inventoryframework:IF:0.11.1'
     //implementation 'de.rapha149.signgui:signgui:2.5.1'
+    implementation 'de.rapha149.signgui:signgui:2.5.2'
 
     compileOnly "net.kyori:adventure-text-serializer-legacy:4.21.0"
     compileOnly "net.kyori:adventure-text-serializer-plain:4.21.0"
