--- a/src/main/resources/CommandPrompter.properties
+++ b/src/main/resources/CommandPrompter.properties
@@ -1,16 +1,16 @@
-PromptInProgress = &6You are still trying to complete a command. Type &c"%s"&6 to cancel.
+PromptInProgress = &6You are still trying to complete a command. Type &c"{0}"&6 to cancel.
 SignPromptMultiArg = &6Sent a multi argument sign prompt. Type the response after the &a&l:
 SignPromptReminder = &6Sent a sign prompt. Every line that you put will be combined into a single response separated by a space
-CompletedCommand = &6Command to execute: &3%s
+CompletedCommand = &6Command to execute: &3{0}
 PromptNoPerm = &cYou don't have permission to use CommandPrompter.
 PromptPlayerOnly = &6CommandPrompter can only be used by a player.!
 PromptCancel = &6Command completion cancelled!
 CommandCancelNotInCompletion = &cYou are not in command completion.
 CommandReloadSuccess = &aSuccessfully reloaded configuration!
-CommandRebuildHeadCacheSuccess = &aSuccessfully rebuilt head cache! (%sms)
+CommandRebuildHeadCacheSuccess = &aSuccessfully rebuilt head cache! ({0}ms)
 DelegateInvalidArgs = &cInvalid arguments for console delegate command!
-DelegateUsage = &6Usage: &3%s
-DelegateInvalidPlayer = &cThe player &6%s&c is not online!
+DelegateUsage = &6Usage: &3{0}
+DelegateInvalidPlayer = &cThe player &6{0}&c is not online!
 DelegateConsoleOnly = &cThis command can only be executed by the console!
-PluginVersion = &6Installed Version: &2&l%s
-PCMOutOfBounds = &cThe index &6%s&c is out of bounds!
+PluginVersion = &6Installed Version: &2&l{0}
+PCMOutOfBounds = &cThe index &6{0}&c is out of bounds!
