--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # Created by .ignore support plugin (hsz.mobi)
 ### Gradle template
 .gradle
-/build/
+build/
+**/build/
 
 # Ignore Gradle GUI config
 gradle-app.setting
